Bug 385299 - "X" button from the red box that shows warnings/errors messages needs better contrast
Summary: "X" button from the red box that shows warnings/errors messages needs better ...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.12.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-02 16:01 UTC by Patrick Silva
Modified: 2018-05-08 13:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (31.10 KB, image/png)
2017-10-02 16:01 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-10-02 16:01:18 UTC
Created attachment 108130 [details]
screenshot

My summary says by itself, see the screenshot.
Comment 1 Patrick Silva 2018-04-19 18:18:03 UTC
Same on Arch, plasma 5.12.4.
Comment 2 Nate Graham 2018-05-08 13:14:37 UTC
Git commit 00bce130d35e9dc398709e690a05f8dde70f52b3 by Nathaniel Graham.
Committed on 08/05/2018 at 13:14.
Pushed by ngraham into branch 'master'.

Make KMessageWidget match Kirigami inlineMessage's style

Summary:
This patch makes the venerable and wonderful `KMessageWidget` match the slick style of Kirigami's new `inlineMessage` control. As a by-product, it fixes a few usability bugs.

I didn't implement the drop shadow here because I couldn't get it to look right.
Related: bug 381255

Test Plan:
Spectacle, Breeze light, information:
{F5828175}

Spectacle, Breeze dark, information:
{F5828176}

Spectacle, Breeze light, positive:
{F5828177}

Spectacle, Breeze dark, positive:
{F5828178}

Dolphin, Breeze light, negative:
{F5828180}

Dolphin, Breeze dark, negative:
{F5828179}

Dolphin, Breeze light, warning:
{F5838438}

Konsole, Breeze light with dark profile theme, warning:
{F5838446}

Konsole, Breeze dark with light profile theme, information:
{F5838445}

Konsole, Breeze light, information:
{F5838437}

Kate, Breeze light, positive:
{F5838428}

Kate, Breeze dark, information:
{F5838429}

Reviewers: hein, #plasma, #vdg, elvisangelaccio, cfeck

Reviewed By: hein, #plasma, cfeck

Subscribers: broulik, anemeth, abetts, cfeck, mart, fabianr, elvisangelaccio, jnoack, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12508

M  +34   -46   src/kmessagewidget.cpp
M  +2    -0    src/kmessagewidget.h

https://commits.kde.org/kwidgetsaddons/00bce130d35e9dc398709e690a05f8dde70f52b3