Make KMessageWidget match Kirigami inlineMessage's style

Summary:
This patch makes the venerable and wonderful `KMessageWidget` match the slick style of Kirigami's new `inlineMessage` control. As a by-product, it fixes a few usability bugs.

I didn't implement the drop shadow here because I couldn't get it to look right.

BUG: 385299
BUG: 381255

Test Plan:
Spectacle, Breeze light, information:
{F5828175}

Spectacle, Breeze dark, information:
{F5828176}

Spectacle, Breeze light, positive:
{F5828177}

Spectacle, Breeze dark, positive:
{F5828178}

Dolphin, Breeze light, negative:
{F5828180}

Dolphin, Breeze dark, negative:
{F5828179}

Dolphin, Breeze light, warning:
{F5838438}

Konsole, Breeze light with dark profile theme, warning:
{F5838446}

Konsole, Breeze dark with light profile theme, information:
{F5838445}

Konsole, Breeze light, information:
{F5838437}

Kate, Breeze light, positive:
{F5838428}

Kate, Breeze dark, information:
{F5838429}

Reviewers: hein, #plasma, #vdg, elvisangelaccio, cfeck

Reviewed By: hein, #plasma, cfeck

Subscribers: broulik, anemeth, abetts, cfeck, mart, fabianr, elvisangelaccio, jnoack, #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D12508